Fixed phpunit configuration for coverage report

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,6 +23,7 @@
             <directory>.</directory>
             <exclude>
                 <directory>vendor</directory>
+                <directory>Tests</directory>
                 <directory>Resources</directory>
             </exclude>
         </whitelist>
