DIAM-334: Updated tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,7 @@
             <directory suffix="Test.php">Tests/Entity</directory>
             <directory suffix="Test.php">Tests/Ticket</directory>
             <directory suffix="Test.php">Tests/Validator</directory>
+            <directory suffix="Test.php">Tests/Twig</directory>
         </testsuite>
     </testsuites>
 
