DIAM-372: User should have ability to find branch via KEY

--- a/Resources/config/search.yml
+++ b/Resources/config/search.yml
@@ -13,3 +13,7 @@ Diamante\DeskBundle\Entity\Branch:
             name: name
             target_type: text
             target_fields: [name]
+        -
+            name: key
+            target_type: text
+            target_fields: [branch_key]
