DIAM-383: Added urldecode call in specific processors, as filtering constraint value could be urlencoded;

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -5,8 +5,8 @@ oro_system_configuration:
 
     fields:
         diamante_front.registration_required:
-            type: boolean
-            data_type: string
+            type: choice
+            data_type: boolean
             options:
                 label: 'Registration Requied'
                 choices:
