--- a/Resources/config/oro/routing.yml
+++ b/Resources/config/oro/routing.yml
@@ -6,6 +6,17 @@ diamante_desk_bundle:
 diamante_desk_api_branch:
     resource:     diamante.branch.api.service
     type:         diamante_rest_service
+    prefix:       /api/diamante/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+        _format:  xml|json
+    defaults:
+        version:  latest
+        _format:  json
+
+diamante_desk_api_branch_oro:
+    resource:     diamante.branch.api.service_oro
+    type:         diamante_rest_service
     prefix:       /api/rest/{version}/desk/
     requirements:
         version:  latest|v1
@@ -17,6 +28,17 @@ diamante_desk_api_branch:
 diamante_desk_api_ticket:
     resource:     diamante.ticket.api.service
     type:         diamante_rest_service
+    prefix:       /api/diamante/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+        _format:  xml|json
+    defaults:
+        version:  latest
+        _format:  json
+
+diamante_desk_api_ticket_oro:
+    resource:     diamante.ticket.api.service_oro
+    type:         diamante_rest_service
     prefix:       /api/rest/{version}/desk/
     requirements:
         version:  latest|v1
@@ -27,6 +49,17 @@ diamante_desk_api_ticket:
 
 diamante_desk_api_comment:
     resource:     diamante.comment.api.service
+    type:         diamante_rest_service
+    prefix:       /api/diamante/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+        _format:  xml|json
+    defaults:
+        version:  latest
+        _format:  json
+
+diamante_desk_api_comment_oro:
+    resource:     diamante.comment.api.service_oro
     type:         diamante_rest_service
     prefix:       /api/rest/{version}/desk/
     requirements:
