DIAM-441: Configure branch per form

--- a/Resources/config/oro/bundles.yml
+++ b/Resources/config/oro/bundles.yml
@@ -1,2 +1,2 @@
 bundles:
-    - Diamante\EmbeddedFormBundle\DiamanteEmbeddedFormBundle
+    - { name: Diamante\EmbeddedFormBundle\DiamanteEmbeddedFormBundle, priority: 1024 }
