--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -10,13 +10,12 @@
     convertWarningsToExceptions = "true"
     processIsolation            = "false"
     stopOnFailure               = "false"
-    syntaxCheck                 = "false">
+    syntaxCheck                 = "false"
+    bootstrap                   = "bootstrap.php">
 
     <testsuites>
-        <testsuite name="Embedded Form Test Suite">
-            <directory suffix="Test.php">Tests/EventListener</directory>
-            <directory suffix="Test.php">Tests/Form</directory>
-            <directory suffix="Test.php">Tests/Twig</directory>
+        <testsuite name="EmbeddedForm Functional Test Suite">
+            <directory suffix="Test.php">.</directory>
         </testsuite>
     </testsuites>
 
@@ -30,5 +29,9 @@
             </exclude>
         </whitelist>
     </filter>
-
+    <php>
+        <env name="AUTOLOAD_FIXTURES" value="ture"/>
+        <env name="CLASS_AUTOLOADER"  value="/../../../../../vendor/autoload.php"/>
+        <env name="KERNEL_DIR" value="/../../../../../app"/>
+    </php>
 </phpunit>
