--- a/Resources/config/serializer/Model.Ticket.Ticket.yml
+++ b/Resources/config/serializer/Model.Ticket.Ticket.yml
@@ -23,13 +23,14 @@ Diamante\DeskBundle\Model\Ticket\Ticket:
             exclude: true
         status:
             exclude: true
+        reporterDTO:
+            exclude: true
     virtual_properties:
         getAssigneeId:
             serialized_name: assignee
             type: integer
-        getReporterId:
+        getReporterDto:
             serialized_name: reporter
-            type: integer
         getBranchId:
             serialized_name: branch
             type: integer
