--- a/Resources/config/oro/routing.yml
+++ b/Resources/config/oro/routing.yml
@@ -1,17 +1,15 @@
-diamante_desk_bundle:
+diamante_front_bundle:
     resource:     "@DiamanteFrontBundle/Controller/IndexController.php"
     type:         annotation
     prefix:       /diamantefront
 
-diamante_desk_api_register:
-    resource:     "@DiamanteFrontBundle/Controller/RegisterController.php"
+diamante_front_confirm:
+    path:         /diamantefront/confirm
+
+diamante_front_user:
+    resource:     "@DiamanteFrontBundle/Controller/UserController.php"
     type:         rest
-    prefix:       /api/diamante_front/rest/{version}/desk/
-    requirements:
-        version:  latest|v1
-    defaults:
-        version:  latest
-        _format:  json
+    prefix:       /diamantefront
 
 diamante_front_api_user:
     resource:     diamante.front.update_user.service
