--- a/Resources/config/oro/routing.yml
+++ b/Resources/config/oro/routing.yml
@@ -12,3 +12,13 @@ diamante_desk_api_register:
     defaults:
         version:  latest
         _format:  json
+
+diamante_desk_api_reset_password:
+    resource:     "@DiamanteFrontBundle/Controller/ResetPasswordController.php"
+    type:         rest
+    prefix:       /api/diamante_front/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+    defaults:
+        version:  latest
+        _format:  json
