Revert "DIAM-555: Added reporter DTO for tickets"
This reverts commit a1f3d907f2e3cd6070396e0174d3a90104ee9158.

--- a/Resources/config/serializer/Model.Ticket.Ticket.yml
+++ b/Resources/config/serializer/Model.Ticket.Ticket.yml
@@ -23,14 +23,13 @@ Diamante\DeskBundle\Model\Ticket\Ticket:
             exclude: true
         status:
             exclude: true
-        reporterDTO:
-            exclude: true
     virtual_properties:
         getAssigneeId:
             serialized_name: assignee
             type: integer
-        getReporterDto:
+        getReporterId:
             serialized_name: reporter
+            type: integer
         getBranchId:
             serialized_name: branch
             type: integer
