DIAM-555: Created subresources to get ticket's reporter/assignee and comment's authors

--- a/Resources/config/serializer/Model.Ticket.Ticket.yml
+++ b/Resources/config/serializer/Model.Ticket.Ticket.yml
@@ -27,9 +27,9 @@ Diamante\DeskBundle\Model\Ticket\Ticket:
         getAssigneeId:
             serialized_name: assignee
             type: integer
-        getReporterId:
+        getReporter:
             serialized_name: reporter
-            type: integer
+            type: string
         getBranchId:
             serialized_name: branch
             type: integer
