DIAM-7 Fix incorrect dependency in packages

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
             "url": "https://github.com/eltrino/DiamanteFrontBundle.git"
         }
     ],
-    "require": {
+    "require": 
         "php": ">=5.4.4",
-        "diamante/desk": "*",
+        "diamante/desk-bundle": "*",
         "eloquent/composer-npm-bridge": "~2"
     },
     "minimum-stability": "dev",
