--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "oro/platform": "1.4.*",
         "oro/crm": "1.4.*",
         "beberlei/assert": "2.*",
-        "diamante/email-processing-bundle": "dev-master",
-        "diamante/api-bundle": "dev-master"
+        "diamante/email-processing-bundle": "1.0.*@dev",
+        "diamante/api-bundle": "1.0.*@dev"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
