DIAM-628 loaders, DIAM-651 fix attachments, DIAM-653 redirect to login, DIAM-649 format date for comment, DIAM-646, DIAM-641 ,DIAM-640, DIAM-639

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "requirejs-tpl": "*",
     "fontawesome": "~4.2.0",
     "dfm-crypto-js": "~3.1.2",
-    "backbone.paginator": "~2.0.2"
+    "backbone.paginator": "~2.0.2",
+    "moment": "~2.9.0"
   }
 }
