DIAM-7 fixed package dependencies

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     ],
     "require": { 
         "php": ">=5.4.4",
-        "diamante/desk-bundle": "*",
+        "oro/platform": "1.4.*",
+        "diamante/api-bundle": "1.0.*@dev"
+        "diamante/desk-bundle": "1.0.*@dev"
         "eloquent/composer-npm-bridge": "~2"
     },
     "minimum-stability": "dev",
