DIAM-7 fixed package dependencies

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require": { 
         "php": ">=5.4.4",
         "oro/platform": "1.4.*",
-        "diamante/api-bundle": "1.0.*@dev"
-        "diamante/desk-bundle": "1.0.*@dev"
+        "diamante/api-bundle": "1.0.*@dev",
+        "diamante/desk-bundle": "1.0.*@dev",
         "eloquent/composer-npm-bridge": "~2"
     },
     "minimum-stability": "dev",
