--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "oro/platform": "1.4.*",
         "nelmio/api-doc-bundle": "*",
         "friendsofsymfony/rest-bundle": "0.12.*",
-        "jms/serializer-bundle": "*"
+        "jms/serializer-bundle": "*",
+        "diamante/desk-bundle": "1.0.*@dev",
+        "diamante/user-bundle": "1.0.*@dev"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
