--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-git-revision": "0.0.1",
     "grunt-string-replace": "^1.0.0",
     "grunt-sync": "^0.2.0",
     "load-grunt-tasks": "^0.6.0",
-    "requirejs": "^2.1.14"
+    "requirejs": "^2.1.14",
+    "time-grunt": "^1.1.0"
   }
 }
