DIAM-585 Need to change behavior of sorting data in field KEY

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -148,6 +148,7 @@ datagrid:
             columns:
                 key:
                   data_name: key
+                  apply_callback: Diamante\DeskBundle\Datagrid\SortHelper::getKeySortingFunction
                 subject:
                   data_name: i.subject
                 branchName:
