--- a/Resources/config/search.yml
+++ b/Resources/config/search.yml
@@ -17,3 +17,24 @@ Diamante\DeskBundle\Entity\Branch:
             name: key
             target_type: text
             target_fields: [branch_key]
+
+Diamante\DeskBundle\Entity\Ticket:
+    alias: diamante_ticket
+    label: Ticket
+
+    title_fields: [subject]
+    route:
+        name: diamante_ticket_view
+        parameters:
+            key: - # will be passed in "diamante.ticket.search.prepare_result_item.listener"
+
+    search_template: DiamanteDeskBundle:Ticket:searchResult.html.twig
+    fields:
+        -
+            name: key
+            target_type: text
+            target_fields: [key, sequence_number]
+        -
+            name: subject
+            target_type: text
+            target_fields: [subject]
