DIAM-510 Create ticket via email: Formatting of text does not applies in ticket

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "php": ">=5.4.4",
         "oro/platform": "1.4.*",
         "beberlei/assert": "2.*",
-        "zendframework/zend-mail": "2.*"
+        "zendframework/zend-mail": "2.*",
+        "bordeux/email-cleaner": "dev-master"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
