--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "oro/platform": "1.4.*",
         "beberlei/assert": "2.*",
         "zendframework/zend-mail": "2.*",
+        "ezyang/htmlpurifier": "4.6.0",
         "bordeux/email-cleaner": "dev-master"
     },
     "require-dev": {
