--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,15 @@
         {
             "type": "git",
             "url": "https://github.com/eltrino/DiamanteEmailProcessingBundle.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/orocrm/composer.git"
         }
     ],
     "require": {
         "php": ">=5.4.4",
-        "oro/platform": "1.4.*",
+        "oro/platform": "1.7.*",
         "beberlei/assert": "2.*",
         "zendframework/zend-mail": "2.*",
         "ezyang/htmlpurifier": "4.6.0",
