DIAM-753 Upgrade dependencies for oro platform

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,15 @@
         {
             "type": "git",
             "url": "https://github.com/eltrino/DiamanteFrontBundle.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/orocrm/composer.git"
         }
     ],
     "require": { 
         "php": ">=5.4.4",
-        "oro/platform": "1.4.*",
+        "oro/platform": "1.7.*",
         "diamante/api-bundle": "1.0.*@dev",
         "diamante/desk-bundle": "1.0.*@dev",
         "eloquent/composer-npm-bridge": "~2"
