jshint marks regexp for email as "unsafe character"

--- a/.jshintrc
+++ b/.jshintrc
@@ -2,6 +2,7 @@
   "browser": true,
   "jquery": true,
   "newcap": true,
+  "-W100": true,
   "globals": {
     "reqiure": false,
     "define": false
