--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -276,3 +276,8 @@ datagrid:
                 label:         Delete
                 icon:          trash
                 link:          delete_link
+
+    diamante-reporter-select-grid:
+        extends: users-select-grid
+        source:
+            type: diamante_combined_users_datasource
