--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
         "php": ">=5.4.4",
         "oro/platform": "1.7.*",
         "beberlei/assert": "2.*",
-        "diamante/email-processing-bundle": "1.0.*@dev",
-        "diamante/api-bundle": "1.0.*@dev",
-        "diamante/user-bundle": "1.0.*@dev"
+        "diamante/email-processing-bundle": "dev-master",
+        "diamante/api-bundle": "dev-master",
+        "diamante/user-bundle": "dev-master"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
