Updated composer dependencies.

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
     "description": "DiamanteDesk User bundle",
     "require": {
         "beberlei/assert": "2.*",
-        "diamante/desk-bundle": "1.0.*@dev",
-        "eltrino/phpunit-mockannotations": "~1.0@dev"
+        "diamante/desk-bundle": "dev-master"
+    },
+    "require-dev": {
+      "eltrino/phpunit-mockannotations": "~1.0@dev"
     },
     "license": "OSL-3.0",
     "authors": [
