DIAM-809 changes in dpendencies

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
         }
     ],
     "require": {
-        "diamante/distribution-bundle": "self.version",
+        "diamante/distribution-bundle": "self.version"
     },
     "config": {
         "component-dir": "web/bundles/components"
