--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "dfm-crypto-js": "~3.1.2",
     "backbone.paginator": "~2.0.2",
     "moment": "~2.9.0",
-    "pwstrength-bootstrap": "~1.2.5"
+    "pwstrength-bootstrap": "~1.2.5",
+    "tinymce": "~4.1.10"
   }
 }
