--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,8 @@
         convertWarningsToExceptions = "true"
         processIsolation            = "false"
         stopOnFailure               = "false"
-        syntaxCheck                 = "false">
+        syntaxCheck                 = "false"
+        bootstrap                   = "vendor/autoload.php">
 
     <testsuites>
         <testsuite name="DiamanteDesk UserBundle Test Suite">
