--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "oro/platform-application",
-    "description": "Oro Platform Empty Application",
-    "homepage": "https://github.com/orocrm/platform-application.git",
+    "name": "diamante/application",
+    "description": "DiamanteDesk Application",
+    "homepage": "https://github.com/eltrino/diamante-application.git",
     "license": "MIT",
     "autoload": {
         "psr-0": {
@@ -55,7 +55,7 @@
         }
     ],
     "require": {
-        "diamante/distribution-bundle": "self.version"
+        "diamante/distribution-bundle": "dev-master"
     },
     "config": {
         "component-dir": "web/bundles/components"
