--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -125,7 +125,10 @@ datagrid:
             key:
                 label:   diamante.desk.ticket.columns.key
             subject:
-                label:   diamante.desk.ticket.columns.subject
+                label: diamante.desk.ticket.columns.subject
+                type: twig
+                frontend_type: html
+                template: DiamanteDeskBundle:Ticket:Datagrid/Property/subject.html.twig
             branchName:
                 label:   diamante.desk.ticket.columns.branch
             assigneeFullName:
