DIAM-843 Widget content loading failed

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -284,3 +284,8 @@ datagrid:
         extends: users-select-grid
         source:
             type: diamante_combined_users_datasource
+
+    diamante-watcher-select-grid:
+        extends: users-select-grid
+        source:
+            type: diamante_combined_users_datasource
