--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION"  = "hhvm" ]]; then cat travis.php.ini >> /etc/hhvm/php.ini ; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-add travis.php.ini ; fi
-  - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-source --dev
+  - composer self-update
+  - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-dist --dev -vvv
 
 script: phpunit
