DIAM-935 Access to this resource is restricted in admin part

--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -14,6 +14,8 @@ oro_menu_config:
                 position: 90
         dashboard_tab:
             display: false
+        oro_calendar_view_default:
+            display: false
         activities_tab:
             display: false
         reports_tab:
