--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     ],
     "require": {
         "php": ">=5.4.4",
-        "oro/platform": "1.7.*",
-        "oro/crm": "1.7.*"
+        "oro/platform": "1.7.*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
