--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,10 @@
         {
             "type": "git",
             "url": "https://github.com/eltrino/DiamanteEmbeddedFormBundle.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/orocrm/composer.git"
         }
     ],
     "require": {
