--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     ],
     "require": {
         "php": ">=5.4.4",
-        "oro/platform": "1.7.*"
+        "oro/platform": "1.7.*",
+        "diamante/desk-bundle": "dev-master"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
