DIAM-942 hid System Information page

--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -28,6 +28,8 @@ oro_menu_config:
             display: false
         system_tab:
             display: false
+        oro_platform_system_info:
+            display: false
         diamante_config_tab:
           label: 'System'
           uri: '#'
