--- a/Resources/config/reports.yml
+++ b/Resources/config/reports.yml
@@ -7,5 +7,14 @@ reports:
         source:
             type: dql
             dql: "SELECT date(t.createdAt) as day, count(t.createdAt) as count_per_day FROM Diamante\\DeskBundle\\Entity\\Ticket t group by day"
-            repository: "\Diamante\DeskBundle\Infrastructure\Persistence\DoctrineTicketRepository::getDataForChart"
+            #repository: "\Diamante\DeskBundle\Infrastructure\Persistence\DoctrineTicketRepository::getDataForChart"
+
+    tickets_by_priority:
+        chart:
+            type: bar-chart
+            y-axis: value
+            x-axis: priority
+        source:
+            type: dql
+            dql: "SELECT t.priority, count(t.priority) as value FROM Diamante\\DeskBundle\\Entity\\Ticket t group by t.priority"
 
