--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": ">=5.4.4",
         "oro/platform": "1.7.*",
-        "diamante/desk-bundle": "dev-master"
+        "diamante/desk-bundle": "self.version"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
