--- a/Resources/config/reports.yml
+++ b/Resources/config/reports.yml
@@ -7,7 +7,6 @@ reports:
         source:
             type: dql
             dql: "SELECT date(t.createdAt) as day, count(t.createdAt) as count_per_day FROM Diamante\\DeskBundle\\Entity\\Ticket t group by day"
-            #repository: "\Diamante\DeskBundle\Infrastructure\Persistence\DoctrineTicketRepository::getDataForChart"
 
     tickets_by_priority:
         chart:
@@ -18,3 +17,11 @@ reports:
             type: dql
             dql: "SELECT t.priority, count(t.priority) as value FROM Diamante\\DeskBundle\\Entity\\Ticket t group by t.priority"
 
+    time_of_response:
+        chart:
+            type: bar-chart
+            y-axis: data_count
+            x-axis: data_range
+        source:
+            type: repository
+            repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTimeOfResponseReportData"
